# homework_git

./: README.md  pyproject.toml
src/: processing.py
